infrastructure/openshift/ci/natreg-DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: CI
  name: natreg-ci
spec:
  replicas: 1
  selector:
    app: CI
    deploymentconfig: natreg-ci
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: CI
        deploymentconfig: natreg-ci
    spec:
      containers:
        - env:
          - name: PORT
            value: '5000'
          - name: APM_SERVER
            value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io:443'
          - name: APM_TOKEN
            valueFrom:
              secretKeyRef:
                name: apm
                key: token
          - name: APP_NAME
            value: mydata-natreg
          - name: NODE_ENV
            value: test
          - name: OPERATOR_URL
            value: 'http://operator-ci.mydata.svc:3000'
          - name: CLIENT_ID
            value: https://natreg-ci.dev.services.jtech.se
          - name: NO_UPDATE_NOTIFIER
            value: 'true'
          - name: PUBLIC_KEY
            valueFrom:
              secretKeyRef:
                name: natreg
                key: public.key
          - name: PRIVATE_KEY
            valueFrom:
              secretKeyRef:
                name: natreg
                key: private.key
          image: jobtechswe/mydata-natreg:latest
          imagePullPolicy: Always
          name: natreg-ci
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              memory: 400Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ConfigChange
