infrastructure/openshift/ci/operator-DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: CI
  name: operator-ci
spec:
  replicas: 1
  selector:
    app: CI
    deploymentconfig: operator-ci
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: CI
        deploymentconfig: operator-ci
    spec:
      containers:
        - env:
          - name: NODE_ENV
            value: test
          - name: PORT
            value: '3000'
          - name: PGHOST
            value: postgresql-operator-ci.mydata.svc
          - name: PGPORT
            value: '5432'
          - name: PGUSER
            value: postgresuser
          - name: PGPASSWORD
            value: postgrespassword
          - name: PGDATABASE
            value: mydata
          - name: DATABASE_URL
            value: postgres://postgresuser:postgrespassword@postgresql-operator-ci.mydata.svc:5432/mydata
          - name: REDIS
            value: 'redis://:fubar@redis-ci.mydata.svc:6379/'
          - name: APP_NAME
            value: operator_ci
          - name: APM_SERVER
            value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io'
          - name: APM_TOKEN
            valueFrom:
              secretKeyRef:
                name: apm
                key: token
          - name: PUBLIC_KEY
            valueFrom:
              secretKeyRef:
                name: ci-operator-keys
                key: PUBLIC_KEY
          - name: PRIVATE_KEY
            valueFrom:
              secretKeyRef:
                name: ci-operator-keys
                key: PRIVATE_KEY
          image: jobtechswe/mydata-operator:latest
          imagePullPolicy: Always
          name: operator-ci
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            failureThreshold: 59
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ConfigChange
