infrastructure/openshift/ci/cv-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: CI
  name: cv-ci
spec:
  ports:
    - name: http
      port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: CI
    deploymentconfig: cv-ci
  type: ClusterIP
