infrastructure/openshift/ci/natreg-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: CI
  name: natreg-ci
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: CI
    deploymentconfig: natreg-ci
  type: ClusterIP
