infrastructure/openshift/ci/operator-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: CI
  name: operator-ci
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: CI
    deploymentconfig: operator-ci
  type: ClusterIP
