infrastructure/openshift/ci/cv-Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: CI
  name: cv-ci
spec:
  host: cv-ci.dev.services.jtech.se
  port:
    targetPort: http
  to:
    kind: Service
    name: cv-ci
    weight: 100
  wildcardPolicy: None
  tls:
    valueFrom:
      secretKeyRef:
        key: jtech.se.crt
        name: tls
    termination: edge
